--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                     <div class="profile-card">
                         <div class="profile-header">
                             <div class="profile-avatar">
-                                <img class="abc" src="me.jpg" alt="">
+                                <img style="height: 200px; border-radius: 50%;" class="abc" src="me.jpg" alt="">
                             </div>
                             <h3>Prachi Sharma</h3>
                             <p>Competitive Programmer</p>
@@ -439,7 +439,7 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                 </div>
                 <div class="contact-form-container">
                     <form class="contact-form" id="contact-form">
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <input type="text" id="name" name="name" required>
                             <label for="name">Name</label>
                         </div>
@@ -454,11 +454,11 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                         <div class="form-group">
                             <textarea id="message" name="message" rows="5" required></textarea>
                             <label for="message">Message</label>
-                        </div>
-                        <!-- <button type="submit" class="btn btn-primary">
-                            <span>Send Message</span>
+                        </div> -->
+                        <button type="submit" class="btn btn-primary">
+                            <span onclick="window.location.href='https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg'">Send Message</span>
                             <i class="fas fa-paper-plane"></i>
-                        </button> -->
+                        </button>
                     </form>
                 </div>
             </div>
