--- a/index.html
+++ b/index.html
@@ -437,9 +437,14 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                         </div>
                     </div>
                 </div>
-                <div class="contact-form-container">
-                    <form class="contact-form" id="contact-form">
-                        <!-- <div class="form-group">
+                <button type="" class="btn btn-primary">
+                            <span onclick="window.location.href='https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg'">Send Message</span>
+                            <!-- <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg"></a> -->
+                            <i class="fas fa-paper-plane"></i>
+                </button>
+                <!-- <div class="contact-form-container">
+                    <form class="" id="contact-form">
+                        <div class="form-group">
                             <input type="text" id="name" name="name" required>
                             <label for="name">Name</label>
                         </div>
@@ -454,13 +459,11 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                         <div class="form-group">
                             <textarea id="message" name="message" rows="5" required></textarea>
                             <label for="message">Message</label>
-                        </div> -->
-                        <button type="submit" class="btn btn-primary">
-                            <span onclick="window.location.href='https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg'">Send Message</span>
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
+                        </div>
+                        
+
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
