--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
     </footer>
 
     <!-- Back to Top Button -->
-    <button class="back-to-top" id="back-to-top">
+    <!-- <button class="back-to-top" id="back-to-top">
         <i class="fas fa-chevron-up"></i>
-    </button>
+    </button> -->
 
     <script src="./main.js"></script>
 </body>
