--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         🔥Passionate competitive programmer and full-stack developer with expertise in 
                         algorithms, data structures, and modern web technologies.🔥
                         <br>
-                        ✨Still wondering why my code works… but happy it does..😂 
+                        ✨Still wondering why my code works… but happy it does...😂 
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
