--- a/index.html
+++ b/index.html
@@ -414,6 +414,28 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Let's Connect!</h3>
+                    <div class="platform-stats">
+                        <div class="platform-item" onclick="window.location.href='';" style="cursor: pointer;">
+                            <div class="platform-icon"></div>
+                            <div class="platform-info">
+                                <span class="platform-name">prachisharma9506@gmail.com</span>
+                            </div>
+                        </div>
+                        <div class="platform-item" onclick="window.location.href='https://www.linkedin.com/in/prachisharma95/';" style="cursor: pointer;">
+                            <div class="platform-icon"></div>
+                            <div class="platform-info">
+                                <span class="platform-name">www.linkedin.com/in/prachisharma95</span>
+                            </div>
+                        </div>
+                        <div class="platform-item" onclick="window.location.href='https://github.com/Prachi9506';" style="cursor: pointer;" >
+                            <div class="platform-icon"></div>
+                            <div class="platform-info">
+                                <span class="platform-name">https://github.com/Prachi9506</span>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <p>
                         I'm always excited to discuss new opportunities, collaborate on interesting projects, 
                         or just chat about algorithms and competitive programming.
@@ -423,7 +445,7 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                             <i class="fas fa-envelope"></i>
                             <span>prachisharma9506@gmail.com</span>
                         </div>
-                        <div class="contact-method">
+                        <!-- <div class="contact-method">
                             <i class="fab fa-linkedin"></i>
                             <span>www.linkedin.com/in/prachisharma95</span>
                         </div>
@@ -435,13 +457,13 @@ Also comfortable with problem-solving, data structures & algorithms, and pretend
                             <i class="fas fa-code"></i>
                             <span>https://codeforces.com/profile/prachisharma9506</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
-                <button type="" class="btn btn-primary">
+                <!-- <button type="" class="btn btn-primary">
                             <span onclick="window.location.href='https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg'">Send Message</span>
-                            <!-- <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg"></a> -->
-                            <i class="fas fa-paper-plane"></i>
-                </button>
+                             <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWrRmTwnQwPCrzNFzzzqJpMqFcdMXvBDPxBXJPwTWJhRDhjRXXGNcqMjNSbFFsxMFfrWBDSLg"></a> -->
+                            <!-- <i class="fas fa-paper-plane"></i>
+                </button>  -->
                 <!-- <div class="contact-form-container">
                     <form class="" id="contact-form">
                         <div class="form-group">
