changed resume and projects and cursor

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <h1 class="hero-title">
                         Hi, I'm <span class="accent-text">Prachi Sharma</span>
                     </h1>
-                    <p class="hero-subtitle">
+                    <!-- <p class="hero-subtitle">
                         <span class="typed-text"></span>
                         <span class="cursor">|</span>
-                    </p>
+                    </p> -->
                     <p class="hero-description">
                         🔥Passionate competitive programmer and full-stack developer with expertise in 
                         algorithms, data structures, and modern web technologies.🔥
@@ -55,8 +55,8 @@
                         ✨Still wondering why my code works… but happy it does...😂 
                     </p>
                     <div class="hero-buttons">
-                        <a href="#projects" class="btn btn-primary">View Projects</a>
-                        <a href="#contact" class="btn btn-primary">Resume</a>
+                        <a href="https://github.com/Prachi9506" target="_blank" class="btn btn-primary">View Projects</a>
+                        <a href="https://drive.google.com/file/d/1w5qCTX0wKIY6OMqJ7BraQ0C_N53ehsq_/view" target="_blank" class="btn btn-primary">Resume</a>
                     </div>
                 </div>
                 <div class="hero-visual">
